--- a/src/front-end/styles/modules/menu.scss
+++ b/src/front-end/styles/modules/menu.scss
@@ -21,7 +21,7 @@ nav {
 
   .menu-link {
     display: block;
-    padding: 20px;
+    padding: 10px;
     text-align: center;
 
     &:hover {
